compiler/testData/diagnostics/testsWithStdLib/experimental/experimentalWithNoImpact.kt
// !API_VERSION: 1.3

<!EXPERIMENTAL_ANNOTATION_WITH_NO_IMPACT!>@Experimental(Experimental.Level.WARNING, [])<!>
annotation class ExperimentalAPI
